static/page.css
.staff-block {
	border: 2px solid blue;
	border-radius: 5px;
	background-color:#8888aa;
	width: 200px;
	text-align: center;
}

.staff-container {
  	padding: 0;
	margin: 0;
  	list-style: none;
  	-ms-box-orient: horizontal;
  	display: -webkit-box;
  	display: -moz-box;
  	display: -ms-flexbox;
  	display: -moz-flex;
  	display: -webkit-flex;
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
}

.bio-img {
	width:150px;
	height:150px;
	border-radius: 50%;
	display: flex;
	margin:auto;
  	justify-content: center;
  	align-items: center;
}

.hero {
    background-image: url("images/showcase.jpg");
	color:#ffffff;
	background-color:#cccccc;
	background-position: center; /* Center the image */
	background-repeat: no-repeat; /* Do not repeat the image */
	background-size: cover; /* Resize the background image to cover the entire container */

}

.slide-div {
	background-color:#222222AA;
}
.slide-div a {
	color:#FFFFFF;
}

.career-div {
	border: 2px solid blue;
	border-radius:5px;
	padding:1px;
}

.page-wrapper {
  margin-right: auto; 
  margin-left:  auto; 



  padding-right: 10px;
  padding-left:  10px;
}

